fix: fix 2fa bug
