# docs/swagger.yaml
@@ -19,6 +19,25 @@ definitions:
           $ref: '#/definitions/model.WeightRecordVO'
         type: array
     type: object
+  model.LoginInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  model.LoginResponse:
+    properties:
+      challengeToken:
+        type: string
+      needTwoFactor:
+        type: boolean
+      token:
+        $ref: '#/definitions/model.UserToken'
+    type: object
   model.RequestResetInput:
     properties:
       email:
@@ -94,6 +113,12 @@ definitions:
       lastName:
         type: string
       password:
+        type: string
+      two_factor_enabled:
+        type: boolean
+      two_factor_secret:
+        type: string
+      two_factor_verified_at:
         type: string
       updatedAt:
         type: string
@@ -222,6 +247,16 @@ definitions:
       expired:
         type: string
     type: object
+  model.VerifyLoginRequest:
+    properties:
+      challengeToken:
+        type: string
+      code:
+        type: string
+    required:
+    - challengeToken
+    - code
+    type: object
   model.WeightRecord:
     properties:
       createdAt:
@@ -271,6 +306,71 @@ info:
   title: health master api
   version: "1.0"
 paths:
+  /api/v1/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login with email and password. If 2FA is enabled, a challenge token
+        will be returned.
+      parameters:
+      - description: login request
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: User login
+      tags:
+      - auth
+  /api/v1/auth/login/2fa:
+    post:
+      consumes:
+      - application/json
+      description: Complete login using a challenge token and TOTP verification code.
+      parameters:
+      - description: Verify Login Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.VerifyLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/model.UserToken'
+        "400":
+          description: bad request error
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: Verify Two-Factor Authentication
+      tags:
+      - auth
   /api/v1/height:
     post:
       consumes:
@@ -576,6 +676,37 @@ paths:
       security:
       - BearerAuth: []
       summary: create a user
+      tags:
+      - user
+    put:
+      consumes:
+      - application/json
+      description: update user details
+      parameters:
+      - description: update user
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: sucess
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: bad request error
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      security:
+      - BearerAuth: []
+      summary: update user
       tags:
       - user
   /api/v1/user-temperature:
