# internal/api/password_reset.go
@@ -21,9 +21,9 @@ import (
 // @Accept			json
 // @Produce		json
 // @Param			RequestResetInput	body		model.RequestResetInput	true	"email address"
-// @Success		200					{object}	errcode.Error							"password reset link sent"
-// @Failure		400					{object}	errcode.Error							"bad request error"
-// @Failure		500					{object}	errcode.Error							"internal server error"
+// @Success		200					{object}	errcode.Error			"password reset link sent"
+// @Failure		400					{object}	errcode.Error			"bad request error"
+// @Failure		500					{object}	errcode.Error			"internal server error"
 // @Router			/api/v1/password-resets [post]
 func CreateResetPassword(c *gin.Context) {
 	var err error
@@ -88,7 +88,7 @@ func sendResetPasswordEmail(email, token string) {
 // @Tags			password-reset
 // @Accept			json
 // @Produce		json
-// @Param			token	path		string	true	"password reset token"
+// @Param			token	path		string				true	"password reset token"
 // @Success		200		{object}	map[string]string	"masked email"
 // @Failure		400		{object}	errcode.Error		"invalid or expired token"
 // @Failure		500		{object}	errcode.Error		"internal server error"
